# Senior_Project

./: .env.example  .gitignore  README.md  SUPERVISOR_NOTES_REPORT.md  pyproject.toml  requirements.txt
artifacts/metadata/: event_integration_summary.json  event_source_schema.json  feature_metadata.json  final_merged_dataset_summary.json  forecast_manifest.json  run_summary.json  training_manifest.json
artifacts/metrics/: forecast_horizon_metrics.csv  forecast_metrics.csv  model_metrics_base.csv  sequence_metrics.csv
artifacts/models/: gradient_boosting.joblib  gru.pt  gru_24h_forecaster.pt  gru_sequence_model.pt  linear_regression.joblib  lstm.pt  lstm_24h_forecaster.pt  ridge_ablation.joblib  ridge_regression.joblib  seasonal_naive.joblib  temporal_cnn.pt  temporal_cnn_24h_forecaster.pt  xgboost.joblib
artifacts/predictions/: forecast_test_predictions.parquet  test_predictions_base.parquet  test_predictions_contextual.parquet
data/interim/: data_audit.json
docs/: architecture.md  data_sources.md  dataset_and_methodology.md  deep_research_prompt.txt  event_integration.md  forecasting.md  geospatial_visualization.md  runbook.md  weather_integration.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
notebooks/: 01_data_audit.ipynb  02_cleaning_and_eda.ipynb  03_feature_engineering.ipynb  04_baselines.ipynb  05_tree_models.ipynb  06_sequence_models.ipynb  07_evaluation_and_visualization.ipynb
src/: __init__.py  cli.py
tests/: test_data_pipeline.py  test_features.py  test_forecasting.py  test_model_inference.py
(+97 files in other folders)
