[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-demand-pressure-capstone"
version = "0.1.0"
description = "A modular NYC TLC yellow taxi demand-pressure forecasting capstone project."
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
